# matrix_repo

./: CMakeLists.txt  README.md  build.sh  clean.sh  interactive.sh  matrix.cpp
benchmarking/: bench.csv  benchmark_accessor.cpp  benchmark_addition.cpp  benchmark_eigsym.cpp  benchmark_initialization.cpp  benchmark_multiplication.cpp  benchmark_transpose.cpp  graphing.py
cmake/: MatrixLibraryConfig.cmake.in
include/: matrix.h  print_vec.hpp
old_files/: Matrix.hpp
src/: Matrix.hpp  benchmark.hpp  custom_exception.cpp  helper_func.cpp  helper_func.hpp  main.cpp  matrix.cpp  matrix_basic_func.cpp  matrix_eigendecomp.cpp  matrix_operators.cpp  matrix_utilfuncs.cpp  naive_matrix.hpp  print_vec.cpp  test_eigsym.cpp  test_tridiag.cpp
test/: test_matrix_arithmetic.cpp  test_tridiag.cpp
